# stratos_brain

./: .env.example  .env.subagent  .env.subagent.template  .gitignore  .vercel-trigger  AI_CHANGES.md  CODEBASE_IMPROVEMENT_RECOMMENDATIONS.md  GURU_TRACKER_DEPLOYMENT.md  GURU_TRACKER_QUICKSTART.md  README.md  ai_model_comparison.json  ai_model_comparison_3way.json  api_response_analysis.md  auth_implementation_notes.md  cloudbuild-feature-job.yaml  cloudbuild.yaml  codebase_summary.md  company_chat_architecture.md  company_chat_implementation_summary.md  comprehensive_codebase_review.md  comprehensive_codebase_review_final.md  comprehensive_codebase_review_updated.md  comprehensive_codebase_review_v2.md  comprehensive_codebase_review_v3.md  comprehensive_codebase_review_v4.md  corrected_memo_template.md  crypto-daily-setup-scanner.yml  daily_brief_analysis.md  daily_brief_v4_fixes.md  dashboard_views_explanation.md  debug_notes.md  deep_research_report_design.md  deploy_supabase.py  document_export_design.md  e2b_integration_notes.md  enhancements_summary.md  equity-daily-setup-scanner.yml  etf_holdings_stats_endpoint.ts  excalidraw_style_notes.md  findings.md  (+16 more)
.claude/: settings.json
config/: backtest_setups.yaml
dashboard/: ideas.md  package-lock.json  package.json  pnpm-lock.yaml  supply-chain-api.js  todo.md  vercel.json  vite.config.ts
data/: advanced_backtest_comparison.json  demo_backtest_report.csv  demo_backtest_report.json  demo_backtest_report.md  fast_backtest_results.json  longterm_backtest_results.json  master_backtest_results.json  optimization_log.txt  (+2 more)
(+590 files in other folders)
